--- a/html/index.html
+++ b/html/index.html
@@ -1,33 +1,44 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>RC_Soillicitaties Development Version</title>
+    <title>RC_Sollicitaties Development Version</title>
     <style>
         /* Add your CSS styles here */
+        header {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 1em;
+        }
+        button {
+            background-color: #001b42;
+            color: white;
+            padding: 1em;
+            margin: 1em;
+            border: none;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
     <header>
         <!-- Add your header content here -->
+        <h1>Sollicitaties Development version</h1>
     </header>
     
     <main>
         <div class="button-container">
             <button>
-                Button 1
-                <span class="button-text">Text for Button 1</span>
+                <span class="button-text">Politie</span>
             </button>
             <button>
-                Button 2
-                <span class="button-text">Text for Button 2</span>
+                <span class="button-text">Ambulance</span>
             </button>
             <button>
-                Button 3
-                <span class="button-text">Text for Button 3</span>
+                <span class="button-text">Wegenwacht</span>
             </button>
             <button>
-                Button 4
-                <span class="button-text">Text for Button 4</span>
+                <span class="button-text">kmar</span>
             </button>
         </div>
     </main>
