--- a/html/index.html
+++ b/html/index.html
@@ -4,18 +4,12 @@
     <link rel="icon" href="img/logo.png" type="image/x-icon">
     <title>RC_sollicitaties dev version</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script>
-        // JavaScript om het dropdown-menu te openen en te sluiten
-        function toggleMenu() {
-            var menuList = document.querySelector('.menu-list');
-            menuList.style.display = menuList.style.display === 'block' ? 'none' : 'block';
-        }
-    </script>
 </head>
 <body>
     <nav class="navbar">
         <div class="logo">
             <a href="home.html"><img src="img/logo.png" alt="Logo"></a>
+            RC_Sollicitaties Development version
         </div>
         <ul class="menu-list">  
             <li><a href="logout.php">Werving</a></li>
@@ -23,16 +17,23 @@
     </nav>
     <div class="banner">
         <div class="content">
-            <h1>Rotterdam Roleplay</h1>
+            <h1>Rotterdam Roleplay Sollicitaties</h1>
         </div>
     </div>
+    <div class="SolliButtons">
+        <a href="sollipaginas/politie.html" class="button">Politie</a>
+        <a href="sollipaginas/politie.html" class="button">Ambulance</a>
+        <a href="sollipaginas/politie.html" class="button">Wegenwacht</a>
+        <a href="sollipaginas/politie.html" class="button">Kmar</a>
+    </div>
+    
 
     
 
 <footer>
     <ul class="footer-links">
         <li><a href="">Werving</a></li>
-        <h5>RC_sollicitaties - Ralfnl12</h5>
+        <h5>RC_sollicitaties V0.0.1 - <a href="https://github.com/Ralfnl12" >Ralfnl12</a></h5>
     </ul>
 </footer>
 </body>
