--- a/html/index.html
+++ b/html/index.html
@@ -21,10 +21,10 @@
         </div>
     </div>
     <div class="SolliButtons">
-        <a href="sollipaginas/politie.html" class="button">Politie</a>
-        <a href="sollipaginas/politie.html" class="button">Ambulance</a>
-        <a href="sollipaginas/politie.html" class="button">Wegenwacht</a>
-        <a href="sollipaginas/politie.html" class="button">Kmar</a>
+        <a href="politie.html" class="button">Politie</a>
+        <a href="politie.html" class="button">Ambulance</a>
+        <a href="politie.html" class="button">Wegenwacht</a>
+        <a href="politie.html" class="button">Kmar</a>
     </div>
     
 
